# lab-4-znormalnyj-dot-1

src/resource_core/: CMakeLists.txt
src/resource_core/include/resource_core/: FileHandle.hpp  ResourceManager.hpp  resource_err.hpp
src/resource_core/src/: FileHandle.cpp  ResourceManager.cpp  resource_err.cpp
tests/: tests.cpp
